--- a/package.json
+++ b/package.json
@@ -27,14 +27,33 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.3",
     "@types/react-router-dom": "^5.3.3",
+    "@yoopta/accordion": "^4.8.3",
+    "@yoopta/action-menu-list": "^4.8.3",
+    "@yoopta/blockquote": "^4.8.3",
+    "@yoopta/callout": "^4.8.3",
+    "@yoopta/code": "^4.8.3",
+    "@yoopta/divider": "^4.8.3",
+    "@yoopta/editor": "^4.8.3",
+    "@yoopta/embed": "^4.8.3",
+    "@yoopta/headings": "^4.8.3",
+    "@yoopta/link": "^4.8.3",
+    "@yoopta/link-tool": "^4.8.3",
+    "@yoopta/lists": "^4.8.3",
+    "@yoopta/marks": "^4.8.3",
+    "@yoopta/paragraph": "^4.8.3",
+    "@yoopta/table": "^4.8.3",
+    "@yoopta/toolbar": "^4.8.3",
     "ahooks": "^3.8.1",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "electron-store": "^8.1.0",
     "jotai": "^2.9.3",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "slate": "^0.103.0",
+    "slate-react": "^0.110.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
